Update frontend to use Render backend URL and add Vercel origin to CORS

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                            type="text"
                            placeholder="Optional" />
                      </div>
-                     
+
                      <div class="form-actions">
                         <button
                            type="submit"
@@ -828,7 +828,7 @@
       <script>
          window.__APP_CONFIG__ = window.__APP_CONFIG__ || {
             apiBaseUrl:
-               window.localStorage.getItem("msb_api_base") || "http://localhost:4000/api",
+               window.localStorage.getItem("msb_api_base") || "https://showbooking-iqzi.onrender.com/api",
          };
       </script>
       <script src="js/script.js"></script>
