--- a/index.html
+++ b/index.html
@@ -725,8 +725,8 @@
                   <a href="#" data-view="bookings">My Tickets</a>
                </nav>
                <div class="footer-contact">
-                  <a href="mailto:support@example.com">support@example.com</a>
-                  <span>+1 (555) 123-4567</span>
+                  <a href="mailto:support@example.com">samsul261103@gmail.com</a>
+                  <span>01970174297</span>
                </div>
             </div>
             <div class="footer-social">
@@ -756,7 +756,6 @@
                </div>
                <div class="footer-meta">
                   <span>&copy; <span id="year"></span> Movie & Show Booking</span>
-                  <span>Crafted in HTML • CSS • JavaScript</span>
                </div>
             </div>
          </div>
