Add toast notifications to all submit-related buttons and actions

--- a/index.html
+++ b/index.html
@@ -756,11 +756,15 @@
                </div>
                <div class="footer-meta">
                   <span>&copy; <span id="year"></span> Movie & Show Booking</span>
-                  
+
                </div>
             </div>
          </div>
       </footer>
+
+      <!-- Toast Notification Container -->
+      <div id="toastContainer" class="toast-container" aria-live="polite" aria-atomic="true"></div>
+
       <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
       <script>
          // Detect if running in Electron
