Redesign toast notifications with modern glassmorphism UI and backdrop blur effect

--- a/index.html
+++ b/index.html
@@ -762,7 +762,8 @@
          </div>
       </footer>
 
-      <!-- Toast Notification Container -->
+      <!-- Toast Notification System -->
+      <div id="toastBackdrop" class="toast-backdrop"></div>
       <div id="toastContainer" class="toast-container" aria-live="polite" aria-atomic="true"></div>
 
       <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
